Add register-item btn and fix some errors

--- a/dev/webtemplete/2-2-selling.html
+++ b/dev/webtemplete/2-2-selling.html
@@ -19,6 +19,7 @@
     <link rel="stylesheet" href="assets/css/fontawesome.css">
     <link rel="stylesheet" href="assets/css/tooplate-main.css">
     <link rel="stylesheet" href="assets/css/owl.css">
+    <link rel="stylesheet" href="assets/css/2-2-selling.css">
 <!--
 Tooplate 2114 Pixie
 https://www.tooplate.com/view/2114-pixie
@@ -52,23 +53,16 @@ https://www.tooplate.com/view/2114-pixie
               <h1>내가 등록한 상품</h1>
             </div>
           </div>
+          <div id="regist-btn-box" class="col-md-8 col-sm-12">
+            <input type="button" value="상품 등록" id='regist-item'>
+          </div>
         </div>
       </div>
     </div>
   
     <div class="featured container no-gutter">
-
-        <div id="selling-list" class="row posts">
-            <!-- <div id="1" class="item new col-md-4">
-              <a href="single-product.html">
-                <div class="featured-item">
-                  <img src="assets/images/product-01.jpg" alt="">
-                  <h4>Proin vel ligula</h4>
-                  <h6>$15.00</h6>
-                </div>
-              </a>
-            </div> -->
-        </div>
+        <!-- Selling Items List Here -->
+        <div id="selling-list" class="row posts"></div>
     </div>
 
     <div class="page-navigation">
