--- a/dev/webtemplete/2-2-selling.html
+++ b/dev/webtemplete/2-2-selling.html
@@ -154,8 +154,8 @@
     <script src="assets/js/devjy.js"></script>
     <script>
       (function () {
-        fill_selling_list('selling-list');
-        fill_selling_list('request-list');
+        fill_list('selling-list');
+        fill_list('request-list');
       })();
     </script>
 
