--- a/dev/webtemplete/index.html
+++ b/dev/webtemplete/index.html
@@ -69,75 +69,36 @@
           <div class="col-md-12">
             <div class="section-heading">
               <div class="line-dec"></div>
-              <h1>Featured Items</h1>
+              <h1>내가 찜한 상품</h1>
+              <h6><a href="#">더보기</a></h6>
             </div>
           </div>
           <div class="col-md-12">
-            <div class="owl-carousel owl-theme">
-              <a href="single-product.html">
-                <div class="featured-item">
-                  <img src="assets/images/item-01.jpg" alt="Item 1">
-                  <h4>Proin vel ligula</h4>
-                  <h6>$15.00</h6>
-                </div>
-              </a>
-              <a href="single-product.html">
-                <div class="featured-item">
-                  <img src="assets/images/item-02.jpg" alt="Item 2">
-                  <h4>Erat odio rhoncus</h4>
-                  <h6>$25.00</h6>
-                </div>
-              </a>
-              <a href="single-product.html">
-                <div class="featured-item">
-                  <img src="assets/images/item-03.jpg" alt="Item 3">
-                  <h4>Integer vel turpis</h4>
-                  <h6>$35.00</h6>
-                </div>
-              </a>
-              <a href="single-product.html">
-                <div class="featured-item">
-                  <img src="assets/images/item-04.jpg" alt="Item 4">
-                  <h4>Sed purus quam</h4>
-                  <h6>$45.00</h6>
-                </div>
-              </a>
-              <a href="single-product.html">
-                <div class="featured-item">
-                  <img src="assets/images/item-05.jpg" alt="Item 5">
-                  <h4>Morbi aliquet</h4>
-                  <h6>$55.00</h6>
-                </div>
-              </a>
-              <a href="single-product.html">
-                <div class="featured-item">
-                  <img src="assets/images/item-06.jpg" alt="Item 6">
-                  <h4>Urna ac diam</h4>
-                  <h6>$65.00</h6>
-                </div>
-              </a>
-              <a href="single-product.html">
-                <div class="featured-item">
-                  <img src="assets/images/item-04.jpg" alt="Item 7">
-                  <h4>Proin eget imperdiet</h4>
-                  <h6>$75.00</h6>
-                </div>
-              </a>
-              <a href="single-product.html">
-                <div class="featured-item">
-                  <img src="assets/images/item-05.jpg" alt="Item 8">
-                  <h4>Nullam risus nisl</h4>
-                  <h6>$85.00</h6>
-                </div>
-              </a>
-              <a href="single-product.html">
-                <div class="featured-item">
-                  <img src="assets/images/item-06.jpg" alt="Item 9">
-                  <h4>Cras tempus</h4>
-                  <h6>$95.00</h6>
-                </div>
-              </a>
+            <div id="wish-list" class="owl-carousel owl-theme"></div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-12">
+            <div class="section-heading">
+              <div class="line-dec"></div>
+              <h1>내가 구매한 상품</h1>
+              <h6><a href="#">더보기</a></h6>
             </div>
+          </div>
+          <div class="col-md-12">
+            <div id="buy-history-list" class="owl-carousel owl-theme"></div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-12">
+            <div class="section-heading">
+              <div class="line-dec"></div>
+              <h1>내가 판매 중인 상품</h1>
+              <h6><a href="2-2-selling.html">더보기</a></h6>
+            </div>
+          </div>
+          <div class="col-md-12">
+            <div id="selling-list" class="owl-carousel owl-theme"></div>
           </div>
         </div>
       </div>
@@ -146,7 +107,7 @@
 
 
     <!-- Subscribe Form Starts Here -->
-    <div class="subscribe-form">
+    <!-- <div class="subscribe-form">
       <div class="container">
         <div class="row">
           <div class="col-md-12">
@@ -181,61 +142,49 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
     <!-- Subscribe Form Ends Here -->
 
 
     
     <!-- Footer Starts Here -->
     <div class="footer">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-12">
-            <div class="logo">
-              <img src="assets/images/header-logo.png" alt="">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-12">
+              <div class="logo">
+                <img src="assets/images/header-logo.png" alt="">
+              </div>
             </div>
-          </div>
-          <div class="col-md-12">
-            <div class="footer-menu">
-              <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Help</a></li>
-                <li><a href="#">Privacy Policy</a></li>
-                <li><a href="#">How It Works ?</a></li>
-                <li><a href="#">Contact Us</a></li>
-              </ul>
-            </div>
-          </div>
-          <div class="col-md-12">
-            <div class="social-icons">
-              <ul>
-                <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                <li><a href="#"><i class="fa fa-rss"></i></a></li>
-              </ul>
+            <div class="col-md-12">
+              <div class="footer-menu">
+                <ul>
+                  <li><a href="#">Home</a></li>
+                  <li><a href="#">Help</a></li>
+                  <li><a href="#">Privacy Policy</a></li>
+                  <!-- <li><a href="#">How It Works ?</a></li> -->
+                  <li><a href="#">Contact Us</a></li>
+                </ul>
+              </div>
             </div>
           </div>
         </div>
       </div>
-    </div>
     <!-- Footer Ends Here -->
 
 
     <!-- Sub Footer Starts Here -->
     <div class="sub-footer">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-12">
-            <div class="copyright-text">
-              <p>Copyright &copy; 2019 Company Name 
-                
-                - Design: <a rel="nofollow" href="https://www.facebook.com/tooplate">Tooplate</a></p>
+        <div class="container">
+          <div class="row">
+            <div class="col-md-12">
+              <div class="copyright-text">
+                <p>Copyright &copy; 2019 CDP1 - Team 6</p>
+              </div>
             </div>
           </div>
         </div>
       </div>
-    </div>
     <!-- Sub Footer Ends Here -->
 
 
@@ -251,8 +200,9 @@
     <script src="assets/js/devjy.js"></script>
     <script>
       (function () {
-        fill_selling_list('selling-list');
-        fill_selling_list('request-list');
+        fill_list('wish-list');
+        fill_list('buy-history-list');
+        fill_list('selling-list');
       })();
     </script>
 
