feat: add 'add product image and description to IPFS from web frontend' and 'rendering them in product-detail' features

--- a/dev/app/src/product.html
+++ b/dev/app/src/product.html
@@ -27,8 +27,10 @@
         </div>
         <div class="col-sm-12">
             <h2 class="col-sm-6 col-sm-offset-3 text-center">
+                <div id="product-image"></div>
                 <div id="product-name"></div>
                 <div id="product-price"></div>
+                <div id="product-desc"></div>
             </h2>
         </div>
         <div class="container-fluid">
