--- a/dev/app/src/list-item.html
+++ b/dev/app/src/list-item.html
@@ -79,6 +79,23 @@
                             </div>
                         </div>
                         <div class="form-group">
+                            <label for="product-image" class="col-sm-2 control-label">Upload product photo</label>
+                            <div class="col-sm-10">
+                                <input type="file" name="product-image" class="form-control" id="product-image"
+                                    required="required">
+                            </div>
+                        </div>
+
+                        <div class="form-group">
+                            <label for="product-description" class="col-sm-2 control-label">Description</label>
+                            <div class="col-sm-10">
+                                <textarea class="form-control" name="product-description" rows="8"
+                                    id="product-description" placeholder="Enter detailed product description"
+                                    required="required"></textarea>
+                            </div>
+                        </div>
+
+                        <div class="form-group">
                             <div class="col-sm-offset-2 col-sm-10">
                                 <button type="submit" class="btn btn-primary">Add Product To Store</button>
                             </div>
