--- a/dev/app/src/list-item.html
+++ b/dev/app/src/list-item.html
@@ -11,7 +11,7 @@
 <body>
     <div class="row">
         <div class="container-fluid navbar navbar-light main">
-            <a href="/" class="navbar-brand">Zastrin Ecommerce Store</a>
+            <a href="/" class="navbar-brand">KNU Ecommerce Store</a>
             <div class="collapse navbar-collapse">
                 <ul class="navbar-nav">
                     <li class="nav-item"><a href="list-item.html" class="nav-link btn list ">List Item</a></li>
