--- a/dev/app/src/product.html
+++ b/dev/app/src/product.html
@@ -12,7 +12,7 @@
 <body>
     <div id="product-details-page" class="row">
         <div class="container-fluid navbar navbar-light main">
-            <a href="/" class="navbar-brand">Zastrin Ecommerce Store</a>
+            <a href="/" class="navbar-brand">KNU Ecommerce Store</a>
             <div class="collapse navbar-collapse">
                 <ul class="navbar-nav">
                     <li class="nav-item"><a href="list-item.html" class="nav-link btn list ">List Item</a></li>
@@ -43,6 +43,18 @@
                             <br>
                             <button type="submit" class="btn form-submit">Buy</button>
                         </form>
+                        <div id="escrow-info">
+                            <div id="buyer"></div>
+                            <div id="seller"></div>
+                            <div id="arbiter"></div>
+                            <div>No. of Participants that have released funds from Escrow: <span
+                                    id="release-count"></span></div>
+                            <div>No. of Participants that have refunded funds from Escrow: <span
+                                    id="refund-count"></span></div>
+                            <a id="release-funds" class="btn btn-primary form-submit">Release Amount to Seller</a>
+                            <a id="refund-funds" class="btn btn-primary form-submit">Refund Amount to Buyer</a>
+                        </div>
+
                     </div>
                 </div>
             </div>
