--- a/dev/webtemplete/2-1-buy.html
+++ b/dev/webtemplete/2-1-buy.html
@@ -41,32 +41,7 @@ https://www.tooplate.com/view/2114-pixie
 
 
     <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top">
-      <div class="container">
-        <a class="navbar-brand" href="#"><img src="assets/images/header-logo.png" alt=""></a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarResponsive">
-          <ul class="navbar-nav ml-auto">
-            <li class="nav-item">
-              <a class="nav-link" href="index.html">Home</a>
-            </li>
-            <li class="nav-item active">
-              <a class="nav-link" href="2-1.html">구매하기
-                <span class="sr-only">(current)</span>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="2-2.html">판매하기</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="2-3.html">문의하기</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
+    <nav id="navbar" class="navbar navbar-expand-lg navbar-dark bg-dark static-top"></nav>
 
     <!-- Page Content -->
     <!-- Items Starts Here -->
@@ -309,6 +284,8 @@ https://www.tooplate.com/view/2114-pixie
     <script src="assets/js/custom.js"></script>
     <script src="assets/js/owl.js"></script>
     <script src="assets/js/isotope.js"></script>
+
+    <script src="assets/js/devjy.js"></script>
 
 
     <script language = "text/Javascript"> 
