--- a/dev/webtemplete/login.html
+++ b/dev/webtemplete/login.html
@@ -43,15 +43,15 @@
                 <span style="color: #DDD">Remember Me</span>
             </div>
 
-            <input type="submit" value="Log In" />
+            <a href="index.html"><input type="submit" value="Log In" /></a>
         </form>
 
         <div class="forgot-password">
             <a href="#">Forgot your password?</a>
         </div>
-        <div class="privacy">
+        <!-- <div class="privacy">
             <a href="#">Privacy Policy</a>
-        </div>
+        </div> -->
 
         <div class="register">
             Don't have an account yet?
