feat : add API for query to DB

--- a/dev/app/src/index.html
+++ b/dev/app/src/index.html
@@ -317,11 +317,11 @@
   <script src="index.js"></script>
   <script src="assets/js/devjy.js"></script>
   <script>
-    (function () {
-      fill_list('wish-list');
-      fill_list('buy-history-list');
-      fill_list('selling-list');
-    })();
+    // (function () {
+    //   fill_list('wish-list');
+    //   fill_list('buy-history-list');
+    //   fill_list('selling-list');
+    // })();
   </script>
 
   <script language="text/Javascript">
