--- a/dev/app/src/product-detail.html
+++ b/dev/app/src/product-detail.html
@@ -62,6 +62,7 @@
               <ul class="slides">
                 <li>
                   <img src="assets/images/big-01.jpg" id="product-image" />
+                  
                 </li>
               </ul>
             </div>
@@ -76,7 +77,7 @@
             <!--상태 거래중 구매가능 거래-->
             <form action="buy-info.html" method="get">
               <label for="quantity">구매수량:</label>
-              <input type="hidden" id="product-id">
+              <input type="hidden" name="id" id="product-id" value ="1" >
               <input name="quantity" type="quantity" class="quantity-text" id="quantity"
                 onfocus="if(this.value == '1') { this.value = ''; }" onBlur="if(this.value == '') { this.value = '1';}"
                 value="1">
@@ -107,7 +108,6 @@
         </div>
         <div class="col-md-12">
           <div class="owl-carousel owl-theme">
-
           </div>
         </div>
       </div>
