--- a/dev/app/src/sell.html
+++ b/dev/app/src/sell.html
@@ -76,29 +76,10 @@
       </div>
     </div>
   
-    <div class="featured container no-gutter">
+    <div class="container no-gutter">
         <!-- Selling - request items List Here -->
         <div id="request-list" class="row posts"></div>
     </div>
-
-    <!-- pagination?? -->
-    <!-- <div class="page-navigation">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-12">
-            <ul>
-              <li class="current-page"><a href="#">1</a></li>
-              <li><a href="#">2</a></li>
-              <li><a href="#">3</a></li>
-              <li><a href="#"><i class="fa fa-angle-right"></i></a></li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </div> -->
-
-    <!-- Featred Page Ends Here -->
-
     
     <!-- Footer Starts Here -->
     <div class="footer">
