--- a/dev/app/src/addProduct.html
+++ b/dev/app/src/addProduct.html
@@ -80,11 +80,11 @@ https://www.tooplate.com/view/2114-pixie
             <div class="container">
                 <div class="row">
                     <div style="display: none;" class="alert alert-success" id="msg"></div>
-                    <form class="form-horizontal col-md-10" id="add-item-to-store">
+                    <form action="buy-info.html" class="form-horizontal col-md-10" id="add-item-to-store" method="post">
                         <div class="form-group">
                             <label for="product-name" class="col-md-2 control-label">Name</label>
                             <div class="col-md-10">
-                                <input type="text" name="product-name" class="form-control" id="product-name"
+                                <input type="text" name="product-name" class="form-control" id="product-id"
                                     placeholder="iPhone, Jeans, shoes etc" required="required"></input>
                             </div>
                         </div>
