--- a/dev/app/src/buy.html
+++ b/dev/app/src/buy.html
@@ -164,7 +164,7 @@
             <p>Godard four dollar toast prism, authentic heirloom raw denim messenger bag gochujang put a bird on it
               celiac readymade vice.</p>
             <div class="container">
-              <form id="subscribe" action="" method="get">
+              <form id="subscribe" action="product-detail.html" method="get">
                 <div class="row">
                   <div class="col-md-7">
                     <fieldset>
