Fix in sell.html
Change code to get product information from DB.
And few more changes.

There's a need to unify variable name of blockchainId.

--- a/dev/app/src/sell.html
+++ b/dev/app/src/sell.html
@@ -131,13 +131,14 @@
     <script src="assets/js/custom.js"></script>
     <script src="assets/js/owl.js"></script>
     <script src="assets/js/isotope.js"></script>
+    <script src="index.js"></script>
     <script src="assets/js/devjy.js"></script>
-    <script>
+    <!-- <script>
       (function () {
-        fill_list('selling-list');
-        fill_list('request-list');
+        // fill_list('selling-list');
+        // fill_list('request-list');
       })();
-    </script>
+    </script> -->
 
     <script language = "text/Javascript"> 
       cleared[0] = cleared[1] = cleared[2] = 0; //set a cleared flag for each field
