Add state message in sell-info.html

--- a/dev/app/src/sell-info.html
+++ b/dev/app/src/sell-info.html
@@ -24,7 +24,7 @@
 
   <script type="text/javascript">
     function display_alert() {
-      alert("OK!!")
+      alert("발송 완료! 구매자가 배송 확인 시 이더가 지급됩니다.");
     } 
   </script>
 </head>
