remove price in product-detail

--- a/dev/app/src/product-detail.html
+++ b/dev/app/src/product-detail.html
@@ -62,7 +62,7 @@
             <div id="slider" class="flexslider">
               <ul class="slides">
                 <div class="featured-item" id="product-id">
-                  <img src="assets/images/loading.png" alt="">
+                  <img src="assets/images/product-06.jpg" alt="">
                   <h4></h4>
                   <h6></h6>
                 </div>
@@ -78,7 +78,7 @@
             <span id="product-status">상태:구매 가능</span>
             <!--상태 거래중 구매가능 거래-->
             <form action="buy-info.html" method="get">
-                <input name="product-id" type="hidden" id="product-id" value="100">
+                <input name="product-id" type="hidden" id="pid" value="100">
                 <input name="product-price" type="hidden" id="product-price" value="1">
                 
               <label for="quantity">구매수량:</label>
