--- a/dev/app/src/buy.html
+++ b/dev/app/src/buy.html
@@ -19,7 +19,7 @@
   <link rel="stylesheet" href="assets/css/fontawesome.css">
   <link rel="stylesheet" href="assets/css/tooplate-main.css">
   <link rel="stylesheet" href="assets/css/owl.css">
-  <link rel="stylesheet" href="assets/css/atg.css">
+  <link rel="stylesheet" href="assets/css/devjy.css">
 
 </head>
 
@@ -67,77 +67,11 @@
 
   <div class="featured container no-gutter">
 
-    <div class="row posts">
-      <div id="1" class="item new col-md-4">
-        <a href="product-detail.html">
-          <div class="featured-item" id="item-0">
-            <img src="assets/images/product-06.jpg" alt="">
-            <h4>Urna ac diam</h4>
-            <h6>$65.00</h6>
-          </div>
-        </a>
-      </div>
-      <div id="2" class="item high col-md-4">
-        <a href="product-detail.html">
-          <div class="featured-item" id="item-1">
-            <img src="assets/images/product-06.jpg" alt="">
-            <h4>Urna ac diam</h4>
-            <h6>$65.00</h6>
-          </div>
-        </a>
-      </div>
-      <div id="3" class="item low col-md-4">
-        <a href="product-detail.html">
-          <div class="featured-item" id="item-2">
-            <img src="assets/images/product-06.jpg" alt="">
-            <h4>Urna ac diam</h4>
-            <h6>$65.00</h6>
-          </div>
-        </a>
-      </div>
-      <div id="4" class="item low col-md-4">
-        <a href="product-detail.html">
-          <div class="featured-item" id="item-3">
-            <img src="assets/images/product-06.jpg" alt="">
-            <h4>Urna ac diam</h4>
-            <h6>$65.00</h6>
-          </div>
-        </a>
-      </div>
-      <div id="5" class="item new high col-md-4">
-        <a href="product-detail.html">
-          <div class="featured-item" id="item-4">
-            <img src="assets/images/product-06.jpg" alt="">
-            <h4>Urna ac diam</h4>
-            <h6>$65.00</h6>
-          </div>
-        </a>
-      </div>
-      <div id="6" class="item new col-md-4">
-        <a href="product-detail.html">
-          <div class="featured-item" id="item-5">
-            <img src="assets/images/product-06.jpg" alt="">
-            <h4>Urna ac diam</h4>
-            <h6>$65.00</h6>
-          </div>
-        </a>
-      </div>
+    <div id="product-list" class="row posts" >
+     
     </div>
   </div>
-  <div class="page-navigation">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-12">
-          <ul>
-            <li class="current-page page-number"><a href="#">1</a></li>
-            <li class="page-number"><a href="#">2</a></li>
-            <li class="page-number"><a href="#">3</a></li>
-            <li class="page-number"><a href="#"><i class="fa fa-angle-right"></i></a></li>
-          </ul>
-        </div>
-      </div>
-    </div>
-  </div>
+  
   <!-- Featred Page Ends Here -->
 
   <!-- Sub Footer Starts Here -->
@@ -165,8 +99,8 @@
   <script src="assets/js/custom.js"></script>
   <script src="assets/js/owl.js"></script>
   <script src="assets/js/isotope.js"></script>
-  <script src="assets/js/devjy.js"></script>
   <script src="index.js"></script>
+  <script src="assets/js/devjy.js"></script>
 
 
   <script language="text/Javascript">
