--- a/dev/app/src/product-detail.html
+++ b/dev/app/src/product-detail.html
@@ -84,8 +84,8 @@
               <label for="quantity">구매수량:</label>
                 <input name="quantity" type="quantity" class="quantity-text" id="quantity" value="1"> 
                 <!-- onfocus="if(this.value == '1') { this.value = ''; }" onBlur="if(this.value == '') { this.value = '1';}" -->
-           
-                <input type="submit" class="button" value="주문하기">
+                <br>
+                <input type="submit" id="btn-product-detail" class="btn btn-primary btn-block" value="주문하기">
             </form>
             <div class="down-content">
               <div class="categories">
