--- a/dev/app/src/product-detail.html
+++ b/dev/app/src/product-detail.html
@@ -43,7 +43,8 @@
 
 
   <!-- Page Content -->
-
+  <br>
+  <br>
   <div class="col-sm-12">
     <div style="display: none;" class="alert alert-success text-center" id="msg"></div>
   </div>
@@ -79,14 +80,14 @@
             <!--상태 거래중 구매가능 거래-->
             <form action="buy-info.html" method="get">
                 <input name="product-id" type="hidden" id="pid" value="100">
-                <input name="product-price" type="hidden" id="product-price" value="1">
                 
               <label for="quantity">구매수량:</label>
-                <input name="quantity" type="quantity" class="quantity-text" id="quantity" value="1"> 
+                <input type="quantity" class="quantity-text" id="quantity" value="1"></div> 
                 <!-- onfocus="if(this.value == '1') { this.value = ''; }" onBlur="if(this.value == '') { this.value = '1';}" -->
                 <br>
                 <input type="submit" id="btn-product-detail" class="btn btn-primary btn-block" value="주문하기">
             </form>
+            <br>
             <div class="down-content">
               <div class="categories">
                 <h6>카테고리: <span><a href="#">중고폰</a>,<a href="#">iPhone</a></h6>
