update query not working but else is good

--- a/dev/app/src/addProduct.html
+++ b/dev/app/src/addProduct.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700" rel="stylesheet">
-     <title>Pixie - Products</title>
+     <title>KNU Phone Market</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -34,7 +34,7 @@ https://www.tooplate.com/view/2114-pixie
       <div class="container">
         <div class="row">
           <div class="col-md-12">
-            <span>단 하나뿐인 이더리움 블록체인 중고장터</span>
+            <span>단 하나뿐인 이더리움 핸드폰 매장</span>
           </div>
         </div>
       </div>
@@ -151,90 +151,6 @@ https://www.tooplate.com/view/2114-pixie
                 </div>
             </div>
        
-<!-- 
-        <div class="row posts">
-            <div id="1" class="item new col-md-4">
-              <a href="single-product.html">
-                <div class="featured-item">
-                  <img src="assets/images/product-01.jpg" alt="">
-                  <h4>Proin vel ligula</h4>
-                  <h6>$15.00</h6>
-                </div>
-              </a>
-            </div>
-            <div id="2" class="item high col-md-4">
-              <a href="single-product.html">
-                <div class="featured-item">
-                  <img src="assets/images/product-02.jpg" alt="">
-                  <h4>Erat odio rhoncus</h4>
-                  <h6>$25.00</h6>
-                </div>
-              </a>
-            </div>
-            <div id="3" class="item low col-md-4">
-              <a href="single-product.html">
-                <div class="featured-item">
-                  <img src="assets/images/product-03.jpg" alt="">
-                  <h4>Integer vel turpis</h4>
-                  <h6>$35.00</h6>
-                </div>
-              </a>
-            </div>
-            <div id="4" class="item low col-md-4">
-              <a href="single-product.html">
-                <div class="featured-item">
-                  <img src="assets/images/product-04.jpg" alt="">
-                  <h4>Sed purus quam</h4>
-                  <h6>$45.00</h6>
-                </div>
-              </a>
-            </div>
-            <div id="5" class="item new high col-md-4">
-              <a href="single-product.html">
-                <div class="featured-item">
-                  <img src="assets/images/product-05.jpg" alt="">
-                  <h4>Morbi aliquet</h4>
-                  <h6>$55.00</h6>
-                </div>
-              </a>
-            </div>
-            <div id="6" class="item new col-md-4">
-              <a href="single-product.html">
-                <div class="featured-item">
-                  <img src="assets/images/product-06.jpg" alt="">
-                  <h4>Urna ac diam</h4>
-                  <h6>$65.00</h6>
-                </div>
-              </a>
-            </div>
-            <div id="7" class="item new high col-md-4">
-              <a href="single-product.html">
-                <div class="featured-item">
-                  <img src="assets/images/product-03.jpg" alt="">
-                  <h4>Proin eget imperdiet</h4>
-                  <h6>$75.00</h6>
-                </div>
-              </a>
-            </div>
-            <div id="8" class="item low new col-md-4">
-              <a href="single-product.html">
-                <div class="featured-item">
-                  <img src="assets/images/product-02.jpg" alt="">
-                  <h4>Nullam risus nisl</h4>
-                  <h6>$85.00</h6>
-                </div>
-              </a>
-            </div>
-            <div id="9" class="item new col-md-4">
-              <a href="single-product.html">
-                <div class="featured-item">
-                  <img src="assets/images/product-01.jpg" alt="">
-                  <h4>Cras tempus</h4>
-                  <h6>$95.00</h6>
-                </div>
-              </a>
-            </div>
-        </div> -->
     </div>
   
 
