--- a/dev/app/src/buy-info.html
+++ b/dev/app/src/buy-info.html
@@ -34,7 +34,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-12">
-          <span>Blockchain second hand market using Ethereum</span>
+          <span>단 하나뿐인 이더리움 핸드폰 매장</span>
         </div>
       </div>
     </div>
@@ -55,11 +55,11 @@
             <h1>배송 정보 </h1>
           </div>
         </div>
-        <div class="col-md-6">
+        <!-- <div class="col-md-6">
           <div id="map">
             <img id="product-image" src="#" alt="No img.">
           </div>
-        </div>
+        </div> -->
         <div class="col-md-6">
           <div class="right-content">
             <div class="down-content">
