--- a/dev/app/src/buy.html
+++ b/dev/app/src/buy.html
@@ -9,7 +9,7 @@
   <meta name="author" content="">
   <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700" rel="stylesheet">
 
-  <title>블록체인 중고마켓, 안전한 거래</title>
+  <title>KNU Phone Market</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -30,7 +30,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-12">
-          <span>단 하나뿐인 이더리움 블록체인 중고장터</span>
+          <span>단 하나뿐인 이더리움 핸드폰 매장</span>
         </div>
       </div>
     </div>
@@ -48,28 +48,40 @@
         <div class="col-md-4 col-sm-12">
           <div class="section-heading ">
             <div class="line-dec"></div>
-            <div id="filters" class="button-group pull-left">
-                <button class="btn btn-primary" id="productList">
-                  <h5>물품목록</h5>
-                </button>
-                <button class="btn btn-primary" id="productPurchased">
-                    <h5>구매내역</h5>
-                </button>
-              </div>
+            <!-- <div id="filters" class="button-group pull-left"> -->
+                <!-- <button class="btn btn-primary" id="productList"> -->
+                  <h1>물품목록</h1>
+                <!-- </button> -->
+                <!-- <button class="btn btn-primary" id="productPurchased"> -->
+                    <!-- <h5>구매내역</h5> -->
+                <!-- </button> -->
+              <!-- </div> -->
           </div>
         </div>
-
       </div>
     </div>
-
   </div>
 
 
   <div class="featured container no-gutter">
-
-    <div id="product-list" class="row posts" >
-     
+    <div id="product-list" class="row posts" ></div>
+  </div>
+  
+  <div class="featured-page">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-4 col-sm-12">
+          <div class="section-heading">
+            <div class="line-dec"></div>
+            <h1>구매 내역</h1>
+          </div>
+        </div>
+      </div>
     </div>
+  </div>
+  
+  <div class="featured container no-gutter">
+    <div id="purchased-list" class="row posts" ></div>
   </div>
   
   <!-- Featred Page Ends Here -->
