--- a/dev/app/src/index.html
+++ b/dev/app/src/index.html
@@ -9,7 +9,7 @@
   <meta name="author" content="">
   <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700" rel="stylesheet">
 
-  <title>블록체인 중고마켓, 안전한 거래</title>
+  <title>KNU Phone Market</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -29,7 +29,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-12">
-          <span>단 하나뿐인 이더리움 블록체인 중고장터</span>
+          <span>단 하나뿐인 이더리움 핸드폰 매장</span>
         </div>
       </div>
     </div>
@@ -45,16 +45,12 @@
       <div class="row">
         <div class="col-md-12">
           <div class="caption">
-            <h2>Blockchain second hand market</h2>
+            <h2>KNU Phone market</h2>
             <div class="line-dec"></div>
-            <p>Welcome!<br>
-              This is blockchain second hand market website.<br>
-              We provide you secure transactions using <strong>Ethereum</strong>.<br>
-              Go get some product now!
+          <strong>KNU Phone Market</strong> 은 블록체인 기반의 중고 핸드폰 장터입니다.
+              저희 마켓은 가상화폐 <strong>이더리움</strong>을 사용해서 안전한 거래를 제공합니다<br><br>
+              저희 서비스를 사용하기위해서는 <a href="https://www.google.com/intl/ko/chrome/">크롬브라우저</a>와 <a href='https://chrome.google.com/webstore/detail/metamask/nkbihfbeogaeaoehlefnkodbefgpgknn?hl=ko'>메타마스크</a>의 설치가 필수적입니다.
             </p>
-            <div class="main-button">
-              <a href="#">Order Now!</a>
-            </div>
           </div>
         </div>
       </div>
