--- a/dev/app/src/product-detail.html
+++ b/dev/app/src/product-detail.html
@@ -64,8 +64,6 @@
               <ul class="slides">
                 <div class="featured-item" id="product-id">
                   <img src="assets/images/product-06.jpg" alt="">
-                  <h4></h4>
-                  <h6></h6>
                 </div>
                 </ul>
             </div>
@@ -73,7 +71,7 @@
         </div>
         <div class="col-md-6">
           <div class="right-content">
-            <h4 id="product-name" value="sss"></h4>
+            <h4 id="product-name"></h4>
             <h6 id="product-price"></h6>
             <p id="product-desc"></p>
             <span id="product-status">상태:구매 가능</span>
