--- a/dev/app/src/sell-info.html
+++ b/dev/app/src/sell-info.html
@@ -30,7 +30,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-12">
-          <span>Blockchain second hand market using Ethereum</span>
+          <span>단 하나뿐인 이더리움 핸드폰 매장</span>
         </div>
       </div>
     </div>
