Translate English to Korean

--- a/dev/app/src/buy-info.html
+++ b/dev/app/src/buy-info.html
@@ -9,7 +9,7 @@
   <meta name="author" content="">
   <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700" rel="stylesheet">
 
-  <title>블록체인 중고마켓, 안전한 거래</title>
+  <title>KNU Phone Market</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -34,7 +34,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-12">
-          <span>단 하나뿐인 이더리움 핸드폰 매장</span>
+          <span>경북대학교 이더리움 핸드폰 매장</span>
         </div>
       </div>
     </div>
