--- a/dev/app/src/buy.html
+++ b/dev/app/src/buy.html
@@ -30,7 +30,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-12">
-          <span>단 하나뿐인 이더리움 핸드폰 매장</span>
+          <span>경북대학교 이더리움 핸드폰 매장</span>
         </div>
       </div>
     </div>
