--- a/dev/app/src/index.html
+++ b/dev/app/src/index.html
@@ -29,7 +29,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-12">
-          <span>단 하나뿐인 이더리움 핸드폰 매장</span>
+          <span>경북대학교 이더리움 핸드폰 매장</span>
         </div>
       </div>
     </div>
@@ -92,72 +92,6 @@
     </div>
   </div>
   <!-- Featred3 Ends Here -->
-
-  <!-- Subscribe Form Starts Here -->
-  <!-- <div class="subscribe-form">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-12">
-            <div class="section-heading">
-              <div class="line-dec"></div>
-              <h1>구독 이메일 등록하기</h1>
-            </div>
-          </div>
-          <div class="col-md-8 offset-md-2">
-            <div class="main-content">
-              <p>구독 이메일을 등록하면 내가 판매중인 물품에 대한 문의사항, 내 장바구니에 담긴 물품의 재고수량, <string>사이트명</string>의 행사정보 등 유용한 정보를 등록한 이메일을 통해 받아보실 수 있습니다.</p>
-              <div class="container">
-                <form id="subscribe" action="" method="get">
-                  <div class="row">
-                    <div class="col-md-7">
-                      <fieldset>
-                        <input name="email" type="text" class="form-control" id="email" 
-                        onfocus="if(this.value == 'Your Email...') { this.value = ''; }" 
-                    	onBlur="if(this.value == '') { this.value = 'Your Email...';}"
-                    	value="ex. mymail@thissite.com" required="">
-                      </fieldset>
-                    </div>
-                    <div class="col-md-5">
-                      <fieldset>
-                        <button type="submit" id="form-submit" class="button">지금 등록하기</button>
-                      </fieldset>
-                    </div>
-                  </div>
-                </form>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div> -->
-  <!-- Subscribe Form Ends Here -->
-
-
-
-  <!-- Footer Starts Here -->
-  <div class="footer">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-12">
-          <div class="logo">
-            <img src="assets/images/header-logo.png" alt="">
-          </div>
-        </div>
-        <div class="col-md-12">
-          <div class="footer-menu">
-            <ul>
-              <li><a href="#">Home</a></li>
-              <li><a href="#">Help</a></li>
-              <li><a href="#">Privacy Policy</a></li>
-              <!-- <li><a href="#">How It Works ?</a></li> -->
-              <li><a href="#">Contact Us</a></li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-  <!-- Footer Ends Here -->
 
 
   <!-- Sub Footer Starts Here -->
