--- a/dev/app/src/product-detail.html
+++ b/dev/app/src/product-detail.html
@@ -9,7 +9,7 @@
   <meta name="author" content="">
   <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700" rel="stylesheet">
 
-  <title>상품정보</title>
+  <title>KNU Phone Market</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -31,7 +31,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-12">
-          <span>단 하나뿐인 이더리움 블록체인 중고장터</span>
+          <span>경북대학교 이더리움 핸드폰 매장</span>
         </div>
       </div>
     </div>
@@ -87,9 +87,6 @@
             </form>
             <br>
             <div class="down-content">
-              <div class="categories">
-                <h6>카테고리: <span><a href="#">중고폰</a>,<a href="#">iPhone</a></h6>
-              </div>
             </div>
           </div>
         </div>
