--- a/dev/app/src/sell.html
+++ b/dev/app/src/sell.html
@@ -9,7 +9,7 @@
     <meta name="author" content="">
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700" rel="stylesheet">
 
-    <title>판매하기</title>
+    <title>KNU Phone Market</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -29,7 +29,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-12">
-            <span>단 하나뿐인 이더리움 핸드폰 매장</span>
+            <span>경북대학교 이더리움 핸드폰 매장</span>
           </div>
         </div>
       </div>
@@ -80,31 +80,6 @@
         <!-- Selling - request items List Here -->
         <div id="request-list" class="row posts"></div>
     </div>
-    
-    <!-- Footer Starts Here -->
-    <div class="footer">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-12">
-            <div class="logo">
-              <img src="assets/images/header-logo.png" alt="">
-            </div>
-          </div>
-          <div class="col-md-12">
-            <div class="footer-menu">
-              <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Help</a></li>
-                <li><a href="#">Privacy Policy</a></li>
-                <!-- <li><a href="#">How It Works ?</a></li> -->
-                <li><a href="#">Contact Us</a></li>
-              </ul>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <!-- Footer Ends Here -->
 
 
     <!-- Sub Footer Starts Here -->
